# meters-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-TW.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: CONTRIBUTING.md  README_CLI_EN.md  core-integration.md  hardware-test-plan.md  migration-v2.md  project-plan.md  session-handoff.md  supported-models.md  testing-guidelines.md  validation-history.md
docs/architecture/: monorepo-layout.md
docs/cli/: CHANGELOG.md  README.md  README.zh-TW.html  README.zh-TW.md  USER_GUIDE.md  USER_GUIDE.zh-TW.html  USER_GUIDE.zh-TW.md  cli-integration.md
docs/contracts/: common-orchestrator-workflows.md  common-worker-protocol.md  meters-cli-jsonl-contract.md  meters-orchestrator-workflows.md  meters-worker-contract.md
docs/core/: CHANGELOG.md  README.md  README.zh-TW.md  integration.md  supported-models.md
docs/skill/: EXAMPLES.md  EXAMPLES.zh-TW.md  README.md  README.zh-TW.md  SKILL.md
docs/webui/: CHANGELOG.md  README.md  README.zh-TW.html  README.zh-TW.md  USER_GUIDE.md  USER_GUIDE.zh-TW.html  USER_GUIDE.zh-TW.md  localization-contract.md  web-ui-change-rules.md
scripts/: _artifact_privacy.ps1  _frequency_period_scpi_probe.py  _validation_helpers.ps1  build_cli_exe.ps1  build_release.ps1  build_webui_exe.ps1  live-cli-check.ps1  preflight-cli.ps1  release-cli-check.ps1
src/keysight_logger/: __init__.py  acquisition.py  cli.py  instrument.py  instrument_backend.py  measurement.py  models.py  simulator.py  storage.py  trigger.py  web_ui.py
src/keysight_logger_cli/: _client_commands.py  _parser.py  cli.py
src/keysight_logger_core/: __init__.py  _request_config.py  _version.py  capabilities.py  instrument.py  instrument_backend.py  measurement.py  models.py  run_plan.py  runner.py  start_resolution.py  trigger.py  validation.py
src/keysight_logger_webui/: __init__.py  launcher.py  web_ui.py
src/meters_tool_cli/: __init__.py  _client_commands.py  _constants.py  _parser.py  cli.py
src/meters_tool_core/: __init__.py  _version.py  acquisition.py  capabilities.py  constants.py  instrument.py  models.py  run_plan.py  runner.py  session.py  storage.py  support_policy.py  trigger.py  trigger_plan.py
src/meters_tool_webui/: __init__.py  _web_payloads.py  launcher.py  web_ui.py
tests/: test_acquisition_engine.py  test_capabilities.py  test_cli_args.py  test_cli_worker_subprocess.py  test_cli_wrappers.py  test_compat_imports.py  test_core_public_api.py  test_core_run_plan.py  test_core_runner.py  test_core_validation.py  test_csv_writer.py  test_docs_cli_examples.py  test_docs_integration_ownership.py  test_instrument.py  test_instrument_backend.py  test_measurement.py  test_package_metadata.py  test_simulator.py  test_software_trigger_adapter.py  test_trigger_router.py  test_web_ui.py  test_workspace_layout.py  test_zh_tw_docs.py
tests/cli/: cli_command_helpers.py  test_cli_args.py  test_cli_client_commands.py  test_cli_docs_ownership.py  test_cli_list_resources_command.py  test_cli_package_metadata.py  test_cli_parser.py  test_cli_start_command.py  test_cli_stop_controls.py  test_cli_worker_subprocess.py  test_cli_wrappers.py  test_docs_cli_examples.py  test_frequency_period_scpi_probe.py  test_live_artifact_privacy.py  test_release_cli_check_contract.py
tests/core/: core_test_helpers.py  test_acquisition_engine.py  test_capabilities.py  test_core_docs_ownership.py  test_core_package_metadata.py  test_core_public_api.py  test_core_run_plan.py  test_core_runner.py  test_core_validation.py  test_csv_writer.py  test_instrument.py  test_instrument_backend.py  test_measurement.py  test_model_profile_validation.py  (+7 more)
(+48 files in other folders)
