[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "meters-tool"
version = "1.6.0"
description = "Meters Tool acquisition toolkit with Core, CLI, and WebUI components for supported digital multimeters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyvisa>=1.14.1",
]

[project.optional-dependencies]
webui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx2>=2.5.0",
    "build",
    "ruff>=0.15.20",
]
all = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
meters-tool = "meters_tool_cli.cli:main"
meters-tool-webui = "meters_tool_webui.web_ui:main"
meters-tool-webui-launcher = "meters_tool_webui.launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "meters_tool_core*",
    "meters_tool_cli*",
    "meters_tool_webui*",
]

[tool.setuptools.package-data]
meters_tool_webui = [
    "static/*.html",
    "static/*.css",
    "static/*.js",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
